--- a/screen/main.html
+++ b/screen/main.html
@@ -19,7 +19,7 @@
         </div>
         <div id="nav_a">
             <a href="https://velog.io/@yujinkimkimkim">velog</a>
-            <a href="https://github.com/yujinkimkim">github</a>
+            <a href="https://github.com/yujinkimkimkim">github</a>
             <a href="https://yujinkimkim.tistory.com/">tistory</a>
         </div>
     </nav>
