--- a/screen/main.html
+++ b/screen/main.html
@@ -18,7 +18,7 @@
             onmouseover="nav_btn_onmouseover()" onmouseout="nav_btn_onmouseout()">미래 계획</button>
         </div>
         <div id="nav_a">
-            <a href="https://velog.io/@yujinkimkimkim">velog</a>
+            <a href="https://velogㅌㅂ.io/@yujinkimkimkim">velog</a>
             <a href="https://github.com/yujinkimkimkim">github</a>
             <a href="https://yujinkimkim.tistory.com/">tistory</a>
         </div>
@@ -96,7 +96,8 @@
                             적겠습니다. 해당 프로젝트 당시 데이터베이스에 대해 배우기 전이었던 상태인지라 백엔드를 혼자 담당해서 제작하는 과정에서 스키마 설계 및 
                             매핑 카디널리티를 혼자 구상하느라 여러모로 어려움이 많았습니다. ERD를 2학년 지식으로 어떻게든 만들어서 코드를 작성했지만 n:m의 관계에서 
                             오류를 접하게 됐습니다. 데이터베이스에 대한 지식이 많이 없던 상태였기에 어떻게 수정해야할지 갈피를 못 잡은 상태로 코드만 수정하다가 
-                            구글링 과정과 선배의 도움으로 해결한 경험이 있습니다. n:m을 n:1과 1:m으로 만들어주면 되는 문제였습니다. 해당 프로젝트 같은 경우는 
+                            구글링 과정과 선배의 도움으로 해결한 경험이 있습니다. n:m을 n:1과 1:m으로 만들어주면 되는 문제였습니다. 이 내용을 깨닫고 
+                            다시 코드 수정을 하여 오류를 해결하여 오류없이 실행가능하도록 고쳤습니다. 해당 프로젝트 같은 경우는 
                             커뮤니티 비슷한 플랫폼 제작이기에 그렇게 복잡한 서버가 아니었습니다. 그래서 엄청난 어려움을 겪지는 못 했지만 데이터베이스에 대한 지식이 전무한 
                             상태에서 제작했다는 데에 아쉬움이 있습니다. 이 프로젝트에서 제작한 서버를 좀더 효율적일 수 있도록 개선하고, 다음 프로젝트에서는 
                             이번 학기 데이터베이스 전공 수업에서 배운 지식을 통해 좀더 정확한 스키마 설계를 해보고자 합니다.
@@ -114,7 +115,10 @@
                         <p>
                             학과 전공 수업 중에 진행한 팀 프로젝트에서 백엔드 담담을 맡아 SpringBoot와 MariaDB를 활용한 서버를 만들었습니다. 
                             2023 교내 창업동아리에 합격하여 팀원들과 함께 안드로이드 스튜디오로 프론트엔드 제작을 했습니다. 앞선 두 활동을 통해 결과물을 만들어가는
-                            과정에서 협업 능력을 키울 수 있었습니다. 협업 툴로는 깃허브를 사용했습니다.
+                            과정에서 협업 능력을 키울 수 있었습니다. 협업 툴로는 깃허브를 사용했습니다. 플러터와 리액트는 공부중에 있어 어느정도 다룰줄 알지만
+                            아직 미숙한 단계입니다. 저는 도전하는 것을 좋아하고 배워가는 과정을 즐기기에 한번 배우고자 마음먹은 것에 열정을 가져 꾸준히 공부하는 
+                            사람입니다. 습듭력이 빠른 편이기에 낯선 환경에서도 적응을 빠르게 하는 편이며, 부족한 점을 항상 찾아서 보완하고자 하는 마음으로 
+                            공부하기에 지금 여러모로 부족한 부분이 많지만 항상 발전의 기회를 갖고 있는 사람입니다.
                         </p>
                     </div>
                 </div>
